# pingos

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  compose.yml
docker/configs/: client.toml  server.toml
scripts/: docker-smoke.sh
src/: cli.rs  client.rs  config.rs  conn.rs  fec.rs  icmp.rs  lib.rs  main.rs  proto.rs  server.rs  wire.rs
tests/: integration.rs
